# hyperfluid

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pyproject.toml  run.py
.github/workflows/: ci.yml
scripts/: benchmark_corr.py  benchmark_fft_lag.py
src/server/: config.py
src/server/api/v1/: main.py
src/server/models/: errors.py  tick.py
src/server/services/: broadcaster.py  covariance.py  rolling_returns.py  stream_manager.py  timing.py
src/server/services/cov/: __init__.py  baseline.py  common.py  fft_lag.py  interface.py  mlx.py  registry.py  tilelang.py  torch.py
src/server/sources/: _retry.py  binance.py  coinbase.py  hyperliquid.py
tests/: test_fft_lag_covariance.py
ui/: README.md  app.js  index.html  styles.css
