[project]
name = "hyperfluid"
version = "0.1.0"
description = "Real-time price covariance dashboard"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "numpy>=2.0.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
torch = ["torch>=2.4.0"]
